date support Safari

--- a/app/Resources/views/easyAdmin/TripValidate/list.html.twig
+++ b/app/Resources/views/easyAdmin/TripValidate/list.html.twig
@@ -261,11 +261,11 @@
             <button class="btn btn-default" v-on:click="setRegionId(1)"
                     v-bind:class="[regionId === 1 ? 'btn-primary' : 'btn-default']">SMB
             </button>
-            <button class="btn btn-default" v-on:click="setRegionId(2)"
-                    v-bind:class="[regionId === 2 ? 'btn-primary' : 'btn-default']">Antwerpen
-            </button>
-            <button class="btn btn-default" v-on:click="setRegionId(3)"
-                    v-bind:class="[regionId === 3 ? 'btn-primary' : 'btn-default']">Leuven
+{#            <button class="btn btn-default" v-on:click="setRegionId(2)"#}
+{#                    v-bind:class="[regionId === 2 ? 'btn-primary' : 'btn-default']">Antwerpen#}
+{#            </button>#}
+            <button class="btn btn-default" v-on:click="setRegionId(4)"
+                    v-bind:class="[regionId === 4 ? 'btn-primary' : 'btn-default']">Leuven
             </button>
         </div>
 
