--- a/app/Resources/views/expense/add.html.twig
+++ b/app/Resources/views/expense/add.html.twig
@@ -1,7 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('css/expenses.css') }}?v={{ random(999999) }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="{{ asset('css/expenses.css') }}?v=1">
     {{ parent() }}
     <style>
         @media (max-width: 768px) {
@@ -11,13 +12,6 @@
                 flex-wrap: wrap;
                 justify-content: center;
                 padding: 0;
-            }
-        }
-
-        @media (min-width: 768px) {
-            .main-content {
-                background: url('/img/vvgps/menuBg.jpg');
-                background-size: cover;
             }
         }
 
@@ -64,6 +58,10 @@
             100% {
                 transform: translate(-40px, 0) rotate(0deg);
             }
+        }
+
+        .bg-white {
+            background-color: white;
         }
     </style>
 {% endblock %}
@@ -205,7 +203,8 @@
                               @click="setTripDate('yesterday')">gisteren</span>
                     </div>
                     <span>OF</span>
-                    <input class="form-control flex1" v-model="tripData.date" type="date">
+{#                    <input id="activityDate" type="text" class="form-control flex1" v-model="tripData.date">#}
+                    <flat-pickr v-model="tripData.date" class="flex1 bg-white" :config="datePickerConfig"></flat-pickr>
                 </div>
             </div>
 
@@ -405,6 +404,9 @@
 
     {% block javascripts %}
         {{ parent() }}
+        <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+        <script src="{{ asset('js/vue/vue-flatpickr.js') }}"></script>
+
         <script src="{{ asset('js/lib/cleave.min.js') }}"></script>
         <script src="{{ asset('js/lib/qrcode.min.js') }}"></script>
 
