major update, add Google Adsense script

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,14 @@
         <link rel="stylesheet" href="{{ asset('css/objects.css') }}?v={{ random(999999) }}">
     {% endblock %}
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}?v=1"/>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8405807820052594",
+            enable_page_level_ads: true
+        });
+    </script>
 </head>
 <body>
 
