--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -20,7 +20,7 @@
                 {{ form_start(form) }}
                     {{ form_row(form._username) }}
                     {{ form_row(form._password) }}
-                        <input type="checkbox" id="_remember_me" name="_remember_me" value="1">
+                        <input type="checkbox" id="remember_me" name="_remember_me" value="1">
                         <label for="_remember_me">Aangemeld blijven</label>
                     <div>
                         <button type="submit" class="btn btn-yellow">Aanmelden</button>
