--- a/app/Resources/views/expense/add.html.twig
+++ b/app/Resources/views/expense/add.html.twig
@@ -319,6 +319,9 @@
                 </div>
                 <div v-show="tripData.transportType === 'car' && (tripData.company === 'soloDriver' || tripData.company === 'groupDriver')">
                     <h3>Hoeveel Km heb je afgelegd? (heen + terug)</h3>
+                    <div v-if="distanceError" class="alert alert-warning">
+                        ${ distanceError }
+                    </div>
                     <div v-show="tripData.estimateDistance > 0">
                         <br>
                         <div class="flex-center-h">
@@ -327,13 +330,12 @@
                             <span v-on:click="tripData.distance = Math.ceil(tripData.estimateDistance) - 1"
                                   class="btn btn-light fa fa-pencil"></span>
                         </div>
-
                     </div>
 
                     <div class="form-group" v-show="tripData.distance !== tripData.estimateDistance">
                         <div class="btnGroup">
                             <div class="input-group limitWidthGroup">
-                                <input class="form-control" v-model="tripData.distance" placeholder="vertrekplaats"
+                                <input class="form-control" v-model="tripData.distance"
                                        type="number" min="0" max="5000"
                                        step="0.01">
                                 <div class="input-group-append">
