--- a/app/Resources/views/exportTemplates/expensesExport.html.twig
+++ b/app/Resources/views/exportTemplates/expensesExport.html.twig
@@ -75,6 +75,7 @@
                     <th>naar</th>
                     <th>afstand</th>
                     <th>bedrag</th>
+                    <th>groep</th>
                     <th>activiteit</th>
                     <th>opmerking</th>
                     <th>opmerking edu</th>
@@ -85,6 +86,7 @@
                         <td>{{ trip.to }}</td>
                         <td>{{ trip.distance }}</td>
                         <td>{{ trip.price }}</td>
+                        <td>{{ trip.groupStack }}</td>
                         <td>{{ trip.activity }}</td>
                         <td>{{ trip.comment }}</td>
                         <td>{{ trip.adminComment }}</td>
