--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -86,6 +86,18 @@
         {% endfor %}
 
         {% block body %}{% endblock %}
+
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- onkostentool - finish -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-8405807820052594"
+             data-ad-slot="2378336540"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 </div>
 
